--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "remote-mod-v2",
   "version": "1.0.0",
   "description": "The apples broke loose",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,6 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.3.3",
-    "discord.js": "^14.7.1"
+    "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
+    "discord.js": "^14.7.1",
+    "express": "^4.18.2"
   }
 }
