--- a/config.json
+++ b/config.json
@@ -1,4 +1,5 @@
 {
-    "gameID": 4149504201,
-    "timeoutMS": 30000
+    "gameID": "4149504201",
+    "timeoutMS": 5000,
+    "modRoles": ["1034133877553385524", "1033855403110449187"]
 }
