--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.3.3",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
     "discord.js": "^14.7.1",
     "express": "^4.18.2"
   }
